--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Basic Brand</title>
     <link rel="stylesheet" href="./assets/css/root.css">
     <link rel="stylesheet" href="./assets/css/header.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/contact.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
 <body>
