Html Struktur erstellt

--- a/about.html
+++ b/about.html
@@ -8,6 +8,158 @@
     <link rel="stylesheet" href="./assets/css/about.css">
 </head>
 <body>
-    
+    <main>
+        <section>
+            <div>
+                <h1>WE TURN CULTURAL VALUE</h1>
+            </div>
+            <div>
+                <h2><span>●</span>INTO COMPANY VALUE</h2>
+                <p>BASIC® is an independent branding & experience design company working at the intersection of culture, design, and technology. We value our craft, have a deep passion for progression, and exist to solve challenges for brands we believe in. Since the beginning, our mission has been to do great work and to have a great time doing it. We believe our mission has guided us well.</p>
+            </div>
+        </section>
+        <hr>
+        <section>
+            <div>
+                <p>EASY TO UNDERSTAND.</p>
+                <p>IMPOSSIBLE TO IGNORE.™</p>
+                <p>BASIC®, INC 10 - 20©</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>(01)</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>(02)</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>(03)</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>(04)</p>
+            </div>
+        </section>
+        <hr>
+        <img src="./assets/img/logo_pink.svg" alt="Logo of Basic in pink">
+        <div>
+            <hr>
+            <p>SEC.</p>
+            <p>/A</p>
+            <p>●</p>
+        </div>
+        <section>
+            <p>AGENCY SNAPSHOT</p>
+            <div>
+                <p>PEOPLE</p>
+                <p>100+</p>
+                <p>We're a world-class team of diverse individuals who are here to do great work as well as be great to work with. Explore our culture manual.</p>
+            </div>
+            <div>
+                <p>OFFICES</p>
+                <p>03</p>
+                <p>San Diego, The Bay Area, and St. Louis. Feel free to reach out and say hello :)</p>
+            </div>
+            <div>
+                <p>YEARS</p>
+                <p>10</p>
+                <p>While we’re proud of our history and our accomplishments, we’re loyal to our future and not our past.</p>
+            </div>
+            <div>
+                <p>GROWTH</p>
+                <p>168%</p>
+                <p>As Adweek’s 18th fastest growing agency, we’ve strengthened our company with new leadership, talent, and clients the past two years. We’re hiring btw.</p>
+            </div>
+            <div>
+                <p>SERVICES</p>
+                <p>05</p>
+                <p>Strategy. Brand Experience. Digital Experience. Content. Technology. We’re uniquely built to build brands that matter in culture.</p>
+            </div>
+            <div>
+                <p>RANKING</p>
+                <p>01</p>
+                <p>Within the mobile and website related categories, no other agency has been recognized by the Webby Awards more than us the past 3 years. Explore our work.</p>
+            </div>
+        </section>
+        <div>
+            <hr>
+            <p>SEC.</p>
+            <p>/B</p>
+            <p>●</p>
+        </div>
+        <section>
+            <p>CAPABILITIES</p>
+            <div>
+                <p>STRATEGIC PLANNING</p>
+                <p>Customer Experience</p>
+                <p>Consumer Insights + Trends</p>
+                <p>Omnichannel + D2C</p>
+                <p>Product + Service Vision</p>
+                <p>Go-To-Market Planning</p>
+                <p>Data Science + Analytics</p>
+            </div>
+            <div>
+                <p>USER EXPERIENCE</p>
+                <p>Experience Strategy</p>
+                <p>eCommerce + Websites</p>
+                <p>Digital Product + Services</p>
+                <p>Design Systems + Style Guides</p>
+                <p>iOS + Android Applications</p>
+                <p>Prototyping & Optimizatione</p>
+            </div>
+            <div>
+                <p>BRAND EXPERIENCE</p>
+                <p>Identity + Positioning</p>
+                <p>Visual Language + Art Direction</p>
+                <p>Design Production + Execution</p>
+                <p>Brand Messaging</p>
+                <p>Brand Guidelines + Playbooks</p>
+                <p>Campaign Development</p>
+            </div>
+            <div>
+                <p>TECHNOLOGY</p>
+                <p>Technical Discovery</p>
+                <p>Technical Architecture</p>
+                <p>Full-Stack Development</p>
+                <p>CMS Implementation</p>
+                <p>Quality Assurance</p>
+                <p>Campaign Development</p>
+            </div>
+            <div>
+                <p>CONTENT CREATION</p>
+                <p>Content Strategy</p>
+                <p>Art Direction</p>
+                <p>Photography</p>
+                <p>Video Production</p>
+                <p>3D / Motion Graphics</p>
+                <p>Copywriting</p>
+            </div>
+        </section>
+        <div>
+            <hr>
+            <p>SEC.</p>
+            <p>/C</p>
+            <p>●</p>
+        </div>
+        <section>
+            <div>
+                <p>AWARDS</p>
+                <div>
+                    <p>While results are what matter most, we believe awards bring value and recognition to organizations as well as individuals.</p>
+                    <a href="#"><button>full awardslist</button></a>
+                </div>
+            </div>
+            <div>
+                <p>WEBBY AWARDS <span>/40</span></p>
+                <p>ADWEEK <span>/01</span></p>
+                <p>AWWWARDS <span>/22</span></p>
+                <p>D&AD <span>/01</span></p>
+                <p>ONE SHOW <span>/03</span></p>
+                <p>THE FWA <span>/07</span></p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
