Html Struktur erstellt und image alt beschrieben

--- a/about.html
+++ b/about.html
@@ -26,24 +26,24 @@
                 <p>BASIC®, INC 10 - 20©</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./assets/img/About-Gallery_3.jpg" alt="Three men can be seen through a gap in the wood at a kitchen table. Their jackets are lying on the white kitchen table. Two men are sitting, one is standing. ">
                 <p>(01)</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./assets/img/About-Gallery_2.jpg" alt="Wall with book sideboard and a picture with text on the wall. In the foreground a man walks through the picture and is blurred by the movement">
                 <p>(02)</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./assets/img/About-Gallery_4.jpg" alt="A young woman of colour sits at a table by the window. One of her dreadlocks falls into her face. The blinds are drawn so that only a little light comes in.">
                 <p>(03)</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./assets/img/About-Gallery_1.jpg" alt="Woman standing behind two men on their office chairs in the office in front of the desk and watching something together">
                 <p>(04)</p>
             </div>
         </section>
         <hr>
-        <img src="./assets/img/logo_pink.svg" alt="Logo of Basic in pink">
+        <img src="./assets/img/logo_pink.svg" alt="Logo of Basic lettering in pink">
         <div>
             <hr>
             <p>SEC.</p>
@@ -159,6 +159,12 @@
                 <p>ONE SHOW <span>/03</span></p>
                 <p>THE FWA <span>/07</span></p>
             </div>
+            <img src="./assets/img/hover-1.jpg" alt="Luminous lettering in white on a concrete wall: love the hustle. Plant leaves are blurred in the foreground, giving the image depth">
+            <img src="./assets/img/hover-2.jpg" alt="Dark picture showing a black cup on a white table. On the cup is a white lettering Basic in capital letters">
+            <img src="./assets/img/hover-3.jpg" alt="Several glasses are filled with champagne on a white table. Only half of the blue bottle can be seen in the upper right corner">
+            <img src="./assets/img/hover-4.jpg" alt="Three red bar stools stand one behind the other. A person is sitting on the last one and has one foot in a white sneaker on the footrest of the bar.">
+            <img src="./assets/img/hover-5.jpg" alt="An arm, reaching in from the left half of the picture, holds up a black sign with basic written on it in white capital letters. In the background you can see the white ceiling of a terrace and some blue sky">
+            <img src="./assets/img/hover-6.jpg" alt="A No is written in capital letters on a milky window pane. Behind the frosted glass pane, the silhouette of a person can be seen, next to whom a plant is standing on the left-hand side">
         </section>
     </main>
 </body>
