--- a/about.html
+++ b/about.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <main>
-        <section>
+        <section class="sec1">
             <div>
                 <h1>WE TURN CULTURAL VALUE</h1>
             </div>
             <div>
-                <h2><span>●</span>INTO COMPANY VALUE</h2>
-                <p>BASIC® is an independent branding & experience design company working at the intersection of culture, design, and technology. We value our craft, have a deep passion for progression, and exist to solve challenges for brands we believe in. Since the beginning, our mission has been to do great work and to have a great time doing it. We believe our mission has guided us well.</p>
+                <h2>●INTO COMPANY VALUE</h2>
+                <p class="p__bold">BASIC® is an independent branding & experience design company working at the intersection of culture, design, and technology. We value our craft, have a deep passion for progression, and exist to solve challenges for brands we believe in. Since the beginning, our mission has been to do great work and to have a great time doing it. We believe our mission has guided us well.</p>
             </div>
         </section>
-        <hr>
+        <!-- <hr>
         <section>
             <div>
                 <p>EASY TO UNDERSTAND.</p>
@@ -165,7 +165,7 @@
             <img src="./assets/img/hover-4.jpg" alt="Three red bar stools stand one behind the other. A person is sitting on the last one and has one foot in a white sneaker on the footrest of the bar.">
             <img src="./assets/img/hover-5.jpg" alt="An arm, reaching in from the left half of the picture, holds up a black sign with basic written on it in white capital letters. In the background you can see the white ceiling of a terrace and some blue sky">
             <img src="./assets/img/hover-6.jpg" alt="A No is written in capital letters on a milky window pane. Behind the frosted glass pane, the silhouette of a person can be seen, next to whom a plant is standing on the left-hand side">
-        </section>
+        </section> -->
     </main>
 </body>
 </html>
