--- a/about.html
+++ b/about.html
@@ -18,12 +18,20 @@
                 <p class="p__bold">BASIC® is an independent branding & experience design company working at the intersection of culture, design, and technology. We value our craft, have a deep passion for progression, and exist to solve challenges for brands we believe in. Since the beginning, our mission has been to do great work and to have a great time doing it. We believe our mission has guided us well.</p>
             </div>
         </section>
-        <!-- <hr>
-        <section>
+        <hr>
+        <section class="sec2">
             <div>
                 <p>EASY TO UNDERSTAND.</p>
                 <p>IMPOSSIBLE TO IGNORE.™</p>
                 <p>BASIC®, INC 10 - 20©</p>
+            </div>
+            <div>
+                <img src="./assets/img/About-Gallery_1.jpg" alt="Woman standing behind two men on their office chairs in the office in front of the desk and watching something together">
+                <p>(04)</p>
+            </div>
+            <div>
+                <img src="./assets/img/About-Gallery_4.jpg" alt="A young woman of colour sits at a table by the window. One of her dreadlocks falls into her face. The blinds are drawn so that only a little light comes in.">
+                <p>(03)</p>
             </div>
             <div>
                 <img src="./assets/img/About-Gallery_3.jpg" alt="Three men can be seen through a gap in the wood at a kitchen table. Their jackets are lying on the white kitchen table. Two men are sitting, one is standing. ">
@@ -33,17 +41,9 @@
                 <img src="./assets/img/About-Gallery_2.jpg" alt="Wall with book sideboard and a picture with text on the wall. In the foreground a man walks through the picture and is blurred by the movement">
                 <p>(02)</p>
             </div>
-            <div>
-                <img src="./assets/img/About-Gallery_4.jpg" alt="A young woman of colour sits at a table by the window. One of her dreadlocks falls into her face. The blinds are drawn so that only a little light comes in.">
-                <p>(03)</p>
-            </div>
-            <div>
-                <img src="./assets/img/About-Gallery_1.jpg" alt="Woman standing behind two men on their office chairs in the office in front of the desk and watching something together">
-                <p>(04)</p>
-            </div>
         </section>
         <hr>
-        <img src="./assets/img/logo_pink.svg" alt="Logo of Basic lettering in pink">
+        <!-- <img src="./assets/img/logo_pink.svg" alt="Logo of Basic lettering in pink">
         <div>
             <hr>
             <p>SEC.</p>
