CSS Basic und Devider gestylt

--- a/about.html
+++ b/about.html
@@ -43,14 +43,14 @@
             </div>
         </section>
         <hr>
-        <!-- <img src="./assets/img/logo_pink.svg" alt="Logo of Basic lettering in pink">
-        <div>
-            <hr>
+        <img class="logoBasic" src="./assets/img/logo_pink.svg" alt="Logo of Basic lettering in pink">
+        <hr>
+        <div class="devider">
             <p>SEC.</p>
             <p>/A</p>
             <p>●</p>
         </div>
-        <section>
+        <!-- <section>
             <p>AGENCY SNAPSHOT</p>
             <div>
                 <p>PEOPLE</p>
