--- a/index.html
+++ b/index.html
@@ -10,6 +10,164 @@
     <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div>
+            <img src="./assets/img/logo.svg" alt="">
+        </div>
+        <nav class="nav__header">
+            <a href="#">WORK</a>
+            <a href="#">ABOUT</a>
+            <a href="#">NEWS</a>
+            <a href="#">THINKING</a>
+            <a href="#">CONTACT</a>
+        </nav>
+        <div class="div__points">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </header>
+    <main>
+        <section class="sc__starts">
+            <h1>WHAT'S NEXT <br> STARTS</h1>
+            <h2>●HERE</h2>
+            <video src="./assets/img/Hero.mp4" autoplay></video>
+        </section>
+        <section class="sc__brand-def">
+            <hr>
+            <p>STRATEGY, DESIGN, TECHNOLOGY</p>
+            <div>
+                <p>
+                    BASIC® is a branding and digital design agency building products, services, and ecommerce experiences that turn cultural values into company value.
+                </p>
+                <p>B</p>
+            </div>
+            <a href="#">SEE THE WORK</a>
+            <hr>
+        </section>
+        <section class="sc__engagements">
+            <div class="div__sidescroll">
+                <img src="./assets/icons/google-dark.svg" alt="">
+                <p>-</p>
+                <h4>GOOGLE</h4>
+                <p>Our embedded partnership with Google is as deep as it gets. We’re the lead creative agency for Google Store and provide strategy, design, and prototyping to other divisions.</p>
+            </div>
+            <div class="div__sidescroll">
+                <img src="./assets/icons/patagonia-dark.svg" alt="">
+                <p>-</p>
+                <h4>PATAGONIA</h4>
+                <p>Ongoing partnership providing strategy, branding, experience design, and development focused on bringing their mission and offerings to consumers through brand-led programs and platforms.</p>
+            </div>
+            <div class="div__sidescroll">
+                <img src="./assets/icons/airbnb-dark.svg" alt="">
+                <p>-</p>
+                <h4>AIRBNB</h4>
+                <p>Helping the world’s leading peer-to-peer hospitality company with creative vision, experience strategy, and execution in partnership with various departments and divisions internally at Airbnb.</p>
+            </div>
+            <div class="div__sidescroll">
+                <img src="./assets/icons/herman-miller-resized.svg" alt="">
+                <p>-</p>
+                <h4>HERMAN MILLER</h4>
+                <p>A collaborative and performance incentivized partnership with our teams working side by side to reimagine the digital shopping experiences for Herman Miller, Design Within Reach, and Hay.</p>
+            </div>
+            <div class="div__sidescroll">
+                <img src="./assets/icons/under-armour-dark.svg" alt="">
+                <p>-</p>
+                <h4>UNDER ARMOUR</h4>
+                <p>Strategy, design, and development to deifferentiate the iconic brand's direct-to-consumer experience through an all new omnichannel approach, global eCommerce flagship, and digital services.</p>
+            </div>
+        </section>
+        <section class="sc__link-about">
+            <div>
+                <h2>BASIC® HELPS BRANDS <span></span>CONNECT
+                    W/ CULTURE</h2>
+                    <p>ADWEEK <span>(AGENCY SPOTLIGHT)</span></p>
+                    <a href="#">ABOUT US</a>
+                    <video src="./assets/img/Culture.mp4" autoplay></video>
+            </div>
+        </section>
+        <section class="sc__news">
+            <h3>FEATURED<br> NEWS</h3>
+            <article class="article__news">
+                <img src="./assets/img/Adweek.jpg" alt="">
+                <div class="div__news">
+                    <p class="p__news-headline">
+                        BASIC® Deemed One of the <hr> World’s Fastest Growing Agencies by Adweek
+                    </p>
+                    <p class="p__news-date">
+                        press 09.25.19
+                    </p>
+                </div>
+            </article>
+            <article class="article__news">
+                <img src="./assets/img/brand.jpg" alt="">
+                <div class="div__news">
+                    <p class="p__news-headline">
+                        The Webby Awards Select BASIC® to Rethink the Future of Their Brand and Digital Platform
+                    </p>
+                    <p class="p__news-date">
+                        work 12.13.19
+                    </p>
+                </div>
+            </article>
+            <article class="article__news">
+                <img src="./assets/img/Furrion-Partnership.jpg" alt="">
+                <div class="div__news">
+                    <p class="p__news-headline">
+                        BASIC® and Furrion partner to launch all new eCommerce website built for a D2C future
+                    </p>
+                    <p class="p__news-date">
+                        work 08.29.19
+                    </p>
+                </div>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <section>
+            <article class="article__footer-subscribe">
+                <p class="p__footer-headline">B</p>
+                <form action="#">
+                    <label for="stay">
+                        <span></span>STAY IN THE KNOW
+                    </label>
+                    <input type="email" name="" id="" placeholder="Email Address">
+                </form>
+            </article>
+            <article class="article__footer-links">
+                <p class="p__footer-headline">
+                    We collaborate with ambitious brands and people. <span>Let's connect</span> :)
+                </p>
+                <div class="div__footer-outer">
+                    <div class="div__footer-inner">
+                        <h4>Social</h4>
+                        <a href="#" target: _blank>Instagram</a>
+                        <a href="#" target: _blank>Twitter</a>
+                        <a href="#" target: _blank>LinkedIn</a>
+                        <a href="#" target: _blank>Facebook</a>
+                    </div>
+                    <div class="div__footer-inner">
+                        <h4>INITIATIVES</h4>
+                        <a href="#" target: _blank>Crafted</a>
+                        <a href="#" target: _blank>Culture Manual</a>
+                        <a href="#" target: _blank>Applied</a>
+                        <a href="#" target: _blank>Brandbeats</a>
+                        <a href="#" target: _blank>Moves</a>
+                    </div>
+                    <div class="div__footer-inner">
+                        <h4>OFFICES</h4>
+                        <a href="#" target: _blank>San Diego - CA</a>
+                        <a href="#" target: _blank>Bay Area - CA</a>
+                        <a href="#" target: _blank>St.Louis - MO</a>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section class="sc__conclusion">
+            <p>BASIC®, INC 10 - 20©</p>
+            <p>EASY TO UNDERSTAND, IMPOSSIBLE TO IGNORE.™</p>
+            <a href="#">TERMS, PRIVACY POLICY</a>
+        </section>
+    </footer>
 </body>
 </html>
