CSS Section 3 gestylt

--- a/about.html
+++ b/about.html
@@ -50,49 +50,49 @@
             <p>/A</p>
             <p>●</p>
         </div>
-        <!-- <section>
-            <p>AGENCY SNAPSHOT</p>
-            <div>
-                <p>PEOPLE</p>
-                <p>100+</p>
+        <section class="sec3">
+            <p class="secHeader gridL">AGENCY SNAPSHOT</p>
+            <div class="gridM1">
+                <p class="secTitle">PEOPLE</p>
+                <p class="secNr">100+</p>
                 <p>We're a world-class team of diverse individuals who are here to do great work as well as be great to work with. Explore our culture manual.</p>
             </div>
-            <div>
-                <p>OFFICES</p>
-                <p>03</p>
+            <div class="gridR1">
+                <p class="secTitle">OFFICES</p>
+                <p class="secNr">03</p>
                 <p>San Diego, The Bay Area, and St. Louis. Feel free to reach out and say hello :)</p>
             </div>
-            <div>
-                <p>YEARS</p>
-                <p>10</p>
+            <div class="gridM2">
+                <p class="secTitle">YEARS</p>
+                <p class="secNr">10</p>
                 <p>While we’re proud of our history and our accomplishments, we’re loyal to our future and not our past.</p>
             </div>
-            <div>
-                <p>GROWTH</p>
-                <p>168%</p>
+            <div class="gridR2">
+                <p class="secTitle">GROWTH</p>
+                <p class="secNr">168%</p>
                 <p>As Adweek’s 18th fastest growing agency, we’ve strengthened our company with new leadership, talent, and clients the past two years. We’re hiring btw.</p>
             </div>
-            <div>
-                <p>SERVICES</p>
-                <p>05</p>
+            <div class="gridM3">
+                <p class="secTitle">SERVICES</p>
+                <p class="secNr">05</p>
                 <p>Strategy. Brand Experience. Digital Experience. Content. Technology. We’re uniquely built to build brands that matter in culture.</p>
             </div>
-            <div>
-                <p>RANKING</p>
-                <p>01</p>
+            <div class="gridR3">
+                <p class="secTitle">RANKING</p>
+                <p class="secNr">01</p>
                 <p>Within the mobile and website related categories, no other agency has been recognized by the Webby Awards more than us the past 3 years. Explore our work.</p>
             </div>
         </section>
-        <div>
-            <hr>
+        <hr>
+        <!-- <div>
             <p>SEC.</p>
             <p>/B</p>
             <p>●</p>
         </div>
         <section>
-            <p>CAPABILITIES</p>
+            <p class="secHeader">CAPABILITIES</p>
             <div>
-                <p>STRATEGIC PLANNING</p>
+                <p class="secTitle">STRATEGIC PLANNING</p>
                 <p>Customer Experience</p>
                 <p>Consumer Insights + Trends</p>
                 <p>Omnichannel + D2C</p>
@@ -101,7 +101,7 @@
                 <p>Data Science + Analytics</p>
             </div>
             <div>
-                <p>USER EXPERIENCE</p>
+                <p class="secTitle">USER EXPERIENCE</p>
                 <p>Experience Strategy</p>
                 <p>eCommerce + Websites</p>
                 <p>Digital Product + Services</p>
@@ -110,7 +110,7 @@
                 <p>Prototyping & Optimizatione</p>
             </div>
             <div>
-                <p>BRAND EXPERIENCE</p>
+                <p class="secTitle">BRAND EXPERIENCE</p>
                 <p>Identity + Positioning</p>
                 <p>Visual Language + Art Direction</p>
                 <p>Design Production + Execution</p>
@@ -119,7 +119,7 @@
                 <p>Campaign Development</p>
             </div>
             <div>
-                <p>TECHNOLOGY</p>
+                <p class="secTitle">TECHNOLOGY</p>
                 <p>Technical Discovery</p>
                 <p>Technical Architecture</p>
                 <p>Full-Stack Development</p>
@@ -128,7 +128,7 @@
                 <p>Campaign Development</p>
             </div>
             <div>
-                <p>CONTENT CREATION</p>
+                <p class="secTitle">CONTENT CREATION</p>
                 <p>Content Strategy</p>
                 <p>Art Direction</p>
                 <p>Photography</p>
@@ -145,7 +145,7 @@
         </div>
         <section>
             <div>
-                <p>AWARDS</p>
+                <p class="secHeader">AWARDS</p>
                 <div>
                     <p>While results are what matter most, we believe awards bring value and recognition to organizations as well as individuals.</p>
                     <a href="#"><button>full awardslist</button></a>
