CSS Section 4 gestylt

--- a/about.html
+++ b/about.html
@@ -84,14 +84,14 @@
             </div>
         </section>
         <hr>
-        <!-- <div>
+        <div class="devider">
             <p>SEC.</p>
             <p>/B</p>
             <p>●</p>
         </div>
-        <section>
-            <p class="secHeader">CAPABILITIES</p>
-            <div>
+        <section class="sec4">
+            <p class="secHeader sec4GridL">CAPABILITIES</p>
+            <div class="sec4GridM1">
                 <p class="secTitle">STRATEGIC PLANNING</p>
                 <p>Customer Experience</p>
                 <p>Consumer Insights + Trends</p>
@@ -100,7 +100,7 @@
                 <p>Go-To-Market Planning</p>
                 <p>Data Science + Analytics</p>
             </div>
-            <div>
+            <div class="sec4GridR1">
                 <p class="secTitle">USER EXPERIENCE</p>
                 <p>Experience Strategy</p>
                 <p>eCommerce + Websites</p>
@@ -109,7 +109,7 @@
                 <p>iOS + Android Applications</p>
                 <p>Prototyping & Optimizatione</p>
             </div>
-            <div>
+            <div class="sec4GridM2">
                 <p class="secTitle">BRAND EXPERIENCE</p>
                 <p>Identity + Positioning</p>
                 <p>Visual Language + Art Direction</p>
@@ -118,7 +118,7 @@
                 <p>Brand Guidelines + Playbooks</p>
                 <p>Campaign Development</p>
             </div>
-            <div>
+            <div class="sec4GridR2">
                 <p class="secTitle">TECHNOLOGY</p>
                 <p>Technical Discovery</p>
                 <p>Technical Architecture</p>
@@ -127,7 +127,7 @@
                 <p>Quality Assurance</p>
                 <p>Campaign Development</p>
             </div>
-            <div>
+            <div class="sec4GridM3">
                 <p class="secTitle">CONTENT CREATION</p>
                 <p>Content Strategy</p>
                 <p>Art Direction</p>
@@ -137,13 +137,13 @@
                 <p>Copywriting</p>
             </div>
         </section>
-        <div>
-            <hr>
+        <hr>
+        <div class="devider">
             <p>SEC.</p>
             <p>/C</p>
             <p>●</p>
         </div>
-        <section>
+        <!-- <section>
             <div>
                 <p class="secHeader">AWARDS</p>
                 <div>
