CSS Section 5 gestylt

--- a/about.html
+++ b/about.html
@@ -143,14 +143,14 @@
             <p>/C</p>
             <p>●</p>
         </div>
-        <!-- <section>
-            <div>
-                <p class="secHeader">AWARDS</p>
-                <div>
-                    <p>While results are what matter most, we believe awards bring value and recognition to organizations as well as individuals.</p>
-                    <a href="#"><button>full awardslist</button></a>
-                </div>
+        <section class="sec5">
+            <p class="secHeader sec5GridL">AWARDS</p>
+            <div class="sec5GridM">
+                <p>While results are what matter most, we believe awards bring value and recognition to organizations as well as individuals.</p>
+                <a href="#"><button class="button">full awardslist</button></a>
             </div>
+        </section>
+        <!-- <section class="sec6">
             <div>
                 <p>WEBBY AWARDS <span>/40</span></p>
                 <p>ADWEEK <span>/01</span></p>
