Section Engagements completed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="sc__starts">
             <h1>WHAT'S NEXT <br> STARTS</h1>
             <h2>●HERE</h2>
-            <video src="./assets/img/Hero.mp4" autoplay></video>
+            <video src="./assets/img/Hero.mp4" autoplay loop muted class="video__hero"></video>
         </section>
         <section class="sc__brand-def">
             <hr>
@@ -40,42 +40,50 @@
                 <p>
                     BASIC® is a branding and digital design agency building products, services, and ecommerce experiences that turn cultural values into company value.
                 </p>
-                <p>B</p>
+                <img src="./assets/img/branding-img.svg" alt="">
             </div>
             <a href="#">SEE THE WORK</a>
             <hr>
         </section>
         <section class="sc__engagements">
-            <div class="div__sidescroll">
-                <img src="./assets/icons/google-dark.svg" alt="">
-                <p>-</p>
-                <h4>GOOGLE</h4>
-                <p>Our embedded partnership with Google is as deep as it gets. We’re the lead creative agency for Google Store and provide strategy, design, and prototyping to other divisions.</p>
-            </div>
-            <div class="div__sidescroll">
-                <img src="./assets/icons/patagonia-dark.svg" alt="">
-                <p>-</p>
-                <h4>PATAGONIA</h4>
-                <p>Ongoing partnership providing strategy, branding, experience design, and development focused on bringing their mission and offerings to consumers through brand-led programs and platforms.</p>
-            </div>
-            <div class="div__sidescroll">
-                <img src="./assets/icons/airbnb-dark.svg" alt="">
-                <p>-</p>
-                <h4>AIRBNB</h4>
-                <p>Helping the world’s leading peer-to-peer hospitality company with creative vision, experience strategy, and execution in partnership with various departments and divisions internally at Airbnb.</p>
-            </div>
-            <div class="div__sidescroll">
-                <img src="./assets/icons/herman-miller-resized.svg" alt="">
-                <p>-</p>
-                <h4>HERMAN MILLER</h4>
-                <p>A collaborative and performance incentivized partnership with our teams working side by side to reimagine the digital shopping experiences for Herman Miller, Design Within Reach, and Hay.</p>
-            </div>
-            <div class="div__sidescroll">
-                <img src="./assets/icons/under-armour-dark.svg" alt="">
-                <p>-</p>
-                <h4>UNDER ARMOUR</h4>
-                <p>Strategy, design, and development to deifferentiate the iconic brand's direct-to-consumer experience through an all new omnichannel approach, global eCommerce flagship, and digital services.</p>
-            </div>
+            <h3>FEATURED ENGAGEMENTS</h3>
+            <article class="article__sidecroll">
+                <div class="div__sidescroll">
+                    <img src="./assets/icons/google-dark.svg" alt="">
+                    <p>-</p>
+                    <h4>GOOGLE</h4>
+                    <hr>
+                    <p>Our embedded partnership with Google is as deep as it gets. We’re the lead creative agency for Google Store and provide strategy, design, and prototyping to other divisions.</p>
+                </div>
+                <div class="div__sidescroll">
+                    <img src="./assets/icons/patagonia-dark.svg" alt="">
+                    <p>-</p>
+                    <h4>PATAGONIA</h4>
+                    <hr>
+                    <p>Ongoing partnership providing strategy, branding, experience design, and development focused on bringing their mission and offerings to consumers through brand-led programs and platforms.</p>
+                </div>
+                <div class="div__sidescroll">
+                    <img src="./assets/icons/airbnb-dark.svg" alt="">
+                    <p>-</p>
+                    <h4>AIRBNB</h4>
+                    <hr>
+                    <p>Helping the world’s leading peer-to-peer hospitality company with creative vision, experience strategy, and execution in partnership with various departments and divisions internally at Airbnb.</p>
+                </div>
+                <div class="div__sidescroll">
+                    <img src="./assets/icons/herman-miller-resized.svg" alt="">
+                    <p>-</p>
+                    <h4>HERMAN MILLER</h4>
+                    <hr>
+                    <p>A collaborative and performance incentivized partnership with our teams working side by side to reimagine the digital shopping experiences for Herman Miller, Design Within Reach, and Hay.</p>
+                </div>
+                <div class="div__sidescroll">
+                    <img src="./assets/icons/under-armour-dark.svg" alt="">
+                    <p>-</p>
+                    <h4>UNDER ARMOUR</h4>
+                    <hr>
+                    <p>Strategy, design, and development to deifferentiate the iconic brand's direct-to-consumer experience through an all new omnichannel approach, global eCommerce flagship, and digital services.</p>
+                </div>
+            </article>
         </section>
         <section class="sc__link-about">
             <div>
