Fertigstellung der about Seite

--- a/about.html
+++ b/about.html
@@ -144,28 +144,28 @@
             <p>●</p>
         </div>
         <section class="sec5">
-            <p class="secHeader sec5GridL">AWARDS</p>
-            <div class="sec5GridM">
-                <p>While results are what matter most, we believe awards bring value and recognition to organizations as well as individuals.</p>
-                <a href="#"><button class="button">full awardslist</button></a>
+            <div class="grid">
+                <p class="secHeader sec5GridL">AWARDS</p>
+                <div class="sec5GridM">
+                    <p>While results are what matter most, we believe awards bring value and recognition to organizations as well as individuals.</p>
+                    <a href="#"><button class="button">full awardslist</button></a>
+                </div>
+            </div>
+            <div class="awards">
+                <p>WEBBY AWARDS <span> /40</span></p>
+                <p>ADWEEK <span> /01</span></p>
+                <p>AWWWARDS <span> /22</span></p>
+                <p>D&AD <span> /01</span></p>
+                <p>ONE SHOW <span> /03</span></p>
+                <p>THE FWA <span> /07</span></p>
+                <img class="img1" src="./assets/img/hover-1.jpg" alt="Luminous lettering in white on a concrete wall: love the hustle. Plant leaves are blurred in the foreground, giving the image depth">
+                <img class="img2" src="./assets/img/hover-2.jpg" alt="Dark picture showing a black cup on a white table. On the cup is a white lettering Basic in capital letters">
+                <img  class="img3" src="./assets/img/hover-3.jpg" alt="Several glasses are filled with champagne on a white table. Only half of the blue bottle can be seen in the upper right corner">
+                <img class="img4" src="./assets/img/hover-4.jpg" alt="Three red bar stools stand one behind the other. A person is sitting on the last one and has one foot in a white sneaker on the footrest of the bar.">
+                <img class="img5" src="./assets/img/hover-5.jpg" alt="An arm, reaching in from the left half of the picture, holds up a black sign with basic written on it in white capital letters. In the background you can see the white ceiling of a terrace and some blue sky">
+                <img class="img6" src="./assets/img/hover-6.jpg" alt="A No is written in capital letters on a milky window pane. Behind the frosted glass pane, the silhouette of a person can be seen, next to whom a plant is standing on the left-hand side">
             </div>
         </section>
-        <!-- <section class="sec6">
-            <div>
-                <p>WEBBY AWARDS <span>/40</span></p>
-                <p>ADWEEK <span>/01</span></p>
-                <p>AWWWARDS <span>/22</span></p>
-                <p>D&AD <span>/01</span></p>
-                <p>ONE SHOW <span>/03</span></p>
-                <p>THE FWA <span>/07</span></p>
-            </div>
-            <img src="./assets/img/hover-1.jpg" alt="Luminous lettering in white on a concrete wall: love the hustle. Plant leaves are blurred in the foreground, giving the image depth">
-            <img src="./assets/img/hover-2.jpg" alt="Dark picture showing a black cup on a white table. On the cup is a white lettering Basic in capital letters">
-            <img src="./assets/img/hover-3.jpg" alt="Several glasses are filled with champagne on a white table. Only half of the blue bottle can be seen in the upper right corner">
-            <img src="./assets/img/hover-4.jpg" alt="Three red bar stools stand one behind the other. A person is sitting on the last one and has one foot in a white sneaker on the footrest of the bar.">
-            <img src="./assets/img/hover-5.jpg" alt="An arm, reaching in from the left half of the picture, holds up a black sign with basic written on it in white capital letters. In the background you can see the white ceiling of a terrace and some blue sky">
-            <img src="./assets/img/hover-6.jpg" alt="A No is written in capital letters on a milky window pane. Behind the frosted glass pane, the silhouette of a person can be seen, next to whom a plant is standing on the left-hand side">
-        </section> -->
     </main>
 </body>
 </html>
