--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
+
 <body>
     <header class="header">
         <div>
@@ -38,7 +40,8 @@
             <p>STRATEGY, DESIGN, TECHNOLOGY</p>
             <div>
                 <p>
-                    BASIC® is a branding and digital design agency building products, services, and ecommerce experiences that turn cultural values into company value.
+                    BASIC® is a branding and digital design agency building products, services, and ecommerce
+                    experiences that turn cultural values into company value.
                 </p>
                 <img src="./assets/img/branding-img.svg" alt="">
             </div>
@@ -53,86 +56,103 @@
                     <p>-</p>
                     <h4>GOOGLE</h4>
                     <hr>
-                    <p>Our embedded partnership with Google is as deep as it gets. We’re the lead creative agency for Google Store and provide strategy, design, and prototyping to other divisions.</p>
+                    <p>Our embedded partnership with Google is as deep as it gets. We’re the lead creative agency for
+                        Google Store and provide strategy, design, and prototyping to other divisions.</p>
                 </div>
                 <div class="div__sidescroll">
                     <img src="./assets/icons/patagonia-dark.svg" alt="">
                     <p>-</p>
                     <h4>PATAGONIA</h4>
                     <hr>
-                    <p>Ongoing partnership providing strategy, branding, experience design, and development focused on bringing their mission and offerings to consumers through brand-led programs and platforms.</p>
+                    <p>Ongoing partnership providing strategy, branding, experience design, and development focused on
+                        bringing their mission and offerings to consumers through brand-led programs and platforms.</p>
                 </div>
                 <div class="div__sidescroll">
                     <img src="./assets/icons/airbnb-dark.svg" alt="">
                     <p>-</p>
                     <h4>AIRBNB</h4>
                     <hr>
-                    <p>Helping the world’s leading peer-to-peer hospitality company with creative vision, experience strategy, and execution in partnership with various departments and divisions internally at Airbnb.</p>
+                    <p>Helping the world’s leading peer-to-peer hospitality company with creative vision, experience
+                        strategy, and execution in partnership with various departments and divisions internally at
+                        Airbnb.</p>
                 </div>
                 <div class="div__sidescroll">
                     <img src="./assets/icons/herman-miller-resized.svg" alt="">
                     <p>-</p>
                     <h4>HERMAN MILLER</h4>
                     <hr>
-                    <p>A collaborative and performance incentivized partnership with our teams working side by side to reimagine the digital shopping experiences for Herman Miller, Design Within Reach, and Hay.</p>
+                    <p>A collaborative and performance incentivized partnership with our teams working side by side to
+                        reimagine the digital shopping experiences for Herman Miller, Design Within Reach, and Hay.</p>
                 </div>
                 <div class="div__sidescroll">
                     <img src="./assets/icons/under-armour-dark.svg" alt="">
                     <p>-</p>
                     <h4>UNDER ARMOUR</h4>
                     <hr>
-                    <p>Strategy, design, and development to deifferentiate the iconic brand's direct-to-consumer experience through an all new omnichannel approach, global eCommerce flagship, and digital services.</p>
+                    <p>Strategy, design, and development to deifferentiate the iconic brand's direct-to-consumer
+                        experience through an all new omnichannel approach, global eCommerce flagship, and digital
+                        services.</p>
                 </div>
             </article>
         </section>
         <section class="sc__link-about">
-            <div>
+            <div class="div__link-about">
                 <h2>BASIC® HELPS BRANDS <span></span>CONNECT
                     W/ CULTURE</h2>
-                    <p>ADWEEK <span>(AGENCY SPOTLIGHT)</span></p>
-                    <a href="#">ABOUT US</a>
-                    <video src="./assets/img/Culture.mp4" autoplay></video>
+                <p>ADWEEK <span>(AGENCY SPOTLIGHT)</span></p>
+                <a href="#">ABOUT US</a>
             </div>
+            <video src="./assets/img/Culture.mp4" autoplay muted loop></video>
         </section>
         <section class="sc__news">
             <h3>FEATURED<br> NEWS</h3>
             <article class="article__news">
-                <img src="./assets/img/Adweek.jpg" alt="">
+                <img src="./assets/img/Adweek.jpg" alt="" class="article__news-img">
                 <div class="div__news">
-                    <p class="p__news-headline">
-                        BASIC® Deemed One of the <hr> World’s Fastest Growing Agencies by Adweek
-                    </p>
-                    <p class="p__news-date">
-                        press 09.25.19
-                    </p>
+                    <div class="div__arrow">
+                        <p class="p__news-headline">
+                            BASIC® Deemed One of the
+                            <hr> World’s Fastest Growing Agencies by Adweek
+                        </p>
+                        <p class="p__news-date">
+                            press 09.25.19
+                        </p>
+                    </div>
+                    <img src="./assets/img/arrow.svg" alt="" class="img__arrow">
                 </div>
             </article>
             <article class="article__news">
-                <img src="./assets/img/brand.jpg" alt="">
+                <img src="./assets/img/brand.jpg" alt="" class="article__news-img">
                 <div class="div__news">
-                    <p class="p__news-headline">
-                        The Webby Awards Select BASIC® to Rethink the Future of Their Brand and Digital Platform
-                    </p>
-                    <p class="p__news-date">
-                        work 12.13.19
-                    </p>
+                    <div class="div__arrow">
+                        <p class="p__news-headline">
+                            The Webby Awards Select BASIC® <hr> to Rethink the Future of Their Brand and Digital Platform
+                        </p>
+                        <p class="p__news-date">
+                            work 12.13.19
+                        </p>
+                    </div>
+                    <img src="./assets/img/arrow.svg" alt="" class="img__arrow">
                 </div>
             </article>
             <article class="article__news">
-                <img src="./assets/img/Furrion-Partnership.jpg" alt="">
+                <img src="./assets/img/Furrion-Partnership.jpg" alt="" class="article__news-img">
                 <div class="div__news">
-                    <p class="p__news-headline">
-                        BASIC® and Furrion partner to launch all new eCommerce website built for a D2C future
-                    </p>
-                    <p class="p__news-date">
-                        work 08.29.19
-                    </p>
+                    <div class="div__arrow">
+                        <p class="p__news-headline">
+                            BASIC® and Furrion partner <hr> to launch all new eCommerce website built for a D2C future
+                        </p>
+                        <p class="p__news-date">
+                            work 08.29.19
+                        </p>
+                    </div>
+                    <img src="./assets/img/arrow.svg" alt="" class="img__arrow">
                 </div>
             </article>
         </section>
     </main>
-    <footer>
-        <section>
+    <footer class="footer">
+        <section class="sc__footer">
             <article class="article__footer-subscribe">
                 <p class="p__footer-headline">B</p>
                 <form action="#">
@@ -178,4 +198,5 @@
         </section>
     </footer>
 </body>
+
 </html>
