Landingpage Version 2 completed

--- a/index.html
+++ b/index.html
@@ -154,28 +154,28 @@
     <footer class="footer">
         <section class="sc__footer">
             <article class="article__footer-subscribe">
-                <p class="p__footer-headline">B</p>
+                <img src="./assets/img/footer-logo.svg" alt="" class="img__footer-logo">
                 <form action="#">
                     <label for="stay">
-                        <span></span>STAY IN THE KNOW
-                    </label>
+                        ● STAY IN THE KNOW
+                    </label><br>
                     <input type="email" name="" id="" placeholder="Email Address">
                 </form>
             </article>
-            <article class="article__footer-links">
+            <article class="article__footer-rechts">
                 <p class="p__footer-headline">
                     We collaborate with ambitious brands and people. <span>Let's connect</span> :)
                 </p>
                 <div class="div__footer-outer">
                     <div class="div__footer-inner">
-                        <h4>Social</h4>
+                        <h4>● Social</h4>
                         <a href="#" target: _blank>Instagram</a>
                         <a href="#" target: _blank>Twitter</a>
                         <a href="#" target: _blank>LinkedIn</a>
                         <a href="#" target: _blank>Facebook</a>
                     </div>
                     <div class="div__footer-inner">
-                        <h4>INITIATIVES</h4>
+                        <h4>● INITIATIVES</h4>
                         <a href="#" target: _blank>Crafted</a>
                         <a href="#" target: _blank>Culture Manual</a>
                         <a href="#" target: _blank>Applied</a>
@@ -183,7 +183,7 @@
                         <a href="#" target: _blank>Moves</a>
                     </div>
                     <div class="div__footer-inner">
-                        <h4>OFFICES</h4>
+                        <h4>● OFFICES</h4>
                         <a href="#" target: _blank>San Diego - CA</a>
                         <a href="#" target: _blank>Bay Area - CA</a>
                         <a href="#" target: _blank>St.Louis - MO</a>
