--- a/work.html
+++ b/work.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./assets/css/work.css">
 </head>
 <body>
-    
+    <main>
+        
+    </main>
 </body>
 </html>
